Form vallidation added and content overlapping in input fields fixed

--- a/static/style.css
+++ b/static/style.css
@@ -554,10 +554,7 @@ textarea.ng-valid {
   height: 100px;
 }
 
-.fill .form-group input:focus ~ label,
-.fill .form-group input:valid ~ label,
-.fill .form-group textarea:focus ~ label,
-.fill .form-group textarea:valid ~ label {
+.fill .form-group .input:focus ~ label , .fill .form-group textarea:focus ~ label ,  .input:not(:placeholder-shown).input:not(:focus) + label{
   transform: translateY(-25px);
   font-size: 10px;
   color: #e71328;
@@ -565,6 +562,7 @@ textarea.ng-valid {
   font-weight: 600;
   padding-left: 10px;
 }
+
 
 .fill .form-row .form-group label {
   position: absolute;
@@ -619,9 +617,9 @@ textarea.ng-valid {
 }
 
 .fill .form-group input:focus ~ .underline::before,
-.fill .form-group input:valid ~ .underline::before,
+.fill .form-group input:not(:placeholder-shown) ~ .underline::before,
 .fill .form-group textarea:focus ~ .underline::before,
-.fill .form-group textarea:valid ~ .underline::before {
+.fill .form-group textarea:not(:placeholder-shown) ~ .underline::before {
   transform: scaleX(1);
   border-bottom: none;
 }
